[package]
name = "async-recorder"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "Store records without waiting for your persistence backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
tokio = { version = "1.28.0", features = ["rt", "sync"] }

[dev-dependencies]
tokio = { version = "1.28.0", features = ["rt", "macros"] }
